@@ -116,7 +116,7 @@ td {
 }
 
 #company_table {
-	padding: -10px 0px 0px 0px;
+	padding: 10px 0px 0px 0px;
 	float: right;
 	margin: -6px 0px 0px 0px;
 }
